--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ankur Chunekar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
@@ -17,8 +18,7 @@
     "express-validator": "^6.14.2",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.4",
-    "request": "^2.88.2"
+    "mongoose": "^6.7.4"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
